--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,8 @@ end
 target 'train' do
   config = use_native_modules!
 
+  pod 'RNScreens', :path => '../node_modules/react-native-screens'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # Enables Flipper.
